--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             But still I build few projects randomly and when I'm in the mood. Here is the list of those projects:
             <ul>
                 <li>Random Quote Generator</li>
-                <li>BMI Calculator</li>
+                <li><a href="/bmiCalc/index.html">BMI Calculator</a></li>
                 <li></li>
             </ul>
         </p> 
