--- a/bmiCalc/index.html
+++ b/bmiCalc/index.html
@@ -1,11 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BMI Calculator</title>
-</head>
-<body>
-    So
-</body>
+    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="../styles.css">
+    <script src="script.js" defer></script>
+  </head>
+  <body>
+    <div class = "navbar" id ="navbar">
+        <div class = "logo">
+            xdCoder
+        </div>
+        <div class="nav-links">
+            <a href="/index.html" >Home</a>
+            <a href="#" class="active">Projects</a>
+            <a href="#">Blog</a>
+            <a href="#">About Me</a>
+        </div>
+        <div class="btn-1">Hire Me</div>
+    </div>
+    <!---BODY SECTION-->
+    <div class="section2">
+    <div class="container">
+      <h1>BMI Calculator</h1>
+
+      <form class="calculator">
+        <div>
+          <label for="weight">Weight (kg)</label>
+          <input type="number" id="weight" min="0" step="1" value="0" />
+        </div>
+
+        <div>
+          <label for="height">Height (cm)</label>
+          <input type="number" id="height" min="0" step="1" value="0" />
+        </div>
+
+        <div>
+          <button type="reset">Reset</button>
+          <button type="submit">Submit</button>
+        </div>
+      </form>
+
+      <section class="output">
+        <h3>Your BMI is</h3>
+        <p id="bmi">0</p>
+        <p id="desc">N/A</p>
+      </section>
+
+      <section class="bmi-scale">
+        <div style="--color: var(--underweight)">
+          <h4>Underweight</h4>
+          <p>&lt; 18.5</p>
+        </div>
+
+        <div style="--color: var(--normal)">
+          <h4>Normal</h4>
+          <p>18.5 – 25</p>
+        </div>
+
+        <div style="--color: var(--overweight)">
+          <h4>Overweight</h4>
+          <p>25 – 30</p>
+        </div>
+
+        <div style="--color: var(--obese)">
+          <h4>Obese</h4>
+          <p>≥ 30</p>
+        </div>
+      </section>
+    </div>
+</div>
+    <!---ends here  -->
+
+    <div class ="footer">
+        <div class="text2">I am the chosen one.</div>
+    </div>
+  </body>
 </html>
