--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="hero">
             <div class="text">
                 <h1>I build things for the web.</h1>
-                <p>I'm a tech enthusiast person trying to learn coding and new stuff. I've completed my diploma in Computer Science and Engineering in 2023 and now going to take admission in Btech in CSE department. I want to become a cybersecurity expert. And I like to read books and write stories and puns too. Overall I want to be famous and admirable.</p><br/>
+                <p>I'm a tech enthusiast person trying to learn coding and new stuff. I've completed my diploma in Computer Science and Engineering in 2023 and now I'm crating xdCoder in github grids. I want to become a cybersecurity expert. And I like to read books and write stories and puns too. Overall I want to be famous and admirable.</p><br/>
                 <ul><b>Things I'm interested in:</b>
                     <li>Mathematics</li>
                     <li>JavaScript</li>
