--- a/index.html
+++ b/index.html
@@ -61,8 +61,12 @@
                 <li></li>
             </ul>
         </p> 
+        <div class="services">
+            <h3>List of Services I provide...</h3>
+        </div>
         </div>
         <div class="idle"></div>
+        
     </div>
     <!---ends here  -->
 
