--- a/index.html
+++ b/index.html
@@ -62,7 +62,16 @@
             </ul>
         </p> 
         <div class="services">
+            <br/>
             <h3>List of Services I provide...</h3>
+            <div class ="services-list">
+                <ul>
+                    <li>Web Development</li>
+                    <li>Web Development</li>
+                    <li>Web Development</li>
+                </ul>
+            </div>
+
         </div>
         </div>
         <div class="idle"></div>
