--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
             <h3>List of Services I provide...</h3>
             <div class ="services-list">
                 <ul>
-                    <li>Web Development</li>
-                    <li>Web Development</li>
-                    <li>Web Development</li>
+                    <li><img src="7.jpg"> Web Development</li>
+                    <li><img src="7.jpg"> Web Development</li>
+                    <li><img src="7.jpg"> Web Development</li>
                 </ul>
             </div>
 
