--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                     <li><img src="7.jpg"> Web Development</li>
                     <li><img src="7.jpg"> Web Development</li>
                     <li><img src="7.jpg"> Web Development</li>
+                    <li><img src="7.jpg"> Web Development</li>
                 </ul>
             </div>
 
