--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
             <h3>List of Services I provide...</h3>
             <div class ="services-list">
                 <ul>
-                    <li><img src="7.jpg"> Web Development</li>
-                    <li><img src="7.jpg"> Web Development</li>
-                    <li><img src="7.jpg"> Web Development</li>
-                    <li><img src="7.jpg"> Web Development</li>
+                    <li><img src="8.png"> Website Development</li>
+                    <li><img src="9.png"> Wordpress Development</li>
+                    <li><img src="10.png"> Content Creation</li>
+                    <li><img src="11.png"> Online Tutoring</li>
                 </ul>
             </div>
 
