--- a/index.html
+++ b/index.html
@@ -72,7 +72,11 @@
                     <li><img src="11.png"> Online Tutoring</li>
                 </ul>
             </div>
-
+        </div>
+        <div class="freelancing">
+            <br>
+            <h3>Here is my freelancing account...</h3>
+            <a href="https://www.fiverr.com/aditya7589"><img src="12.png" alt="">https://www.fiverr.com/aditya7589</a>
         </div>
         </div>
         <div class="idle"></div>
