--- a/index.html
+++ b/index.html
@@ -74,9 +74,8 @@
             </div>
         </div>
         <div class="freelancing">
-            <br>
-            <h3>Here is my freelancing account...</h3>
-            <a href="https://www.fiverr.com/aditya7589"><img src="12.png" alt="">https://www.fiverr.com/aditya7589</a>
+            <div class="heading">I also work as a freelancer...</div>
+           <a href="https://www.fiverr.com/aditya7589"><img src="12.png" alt=""> https://www.fiverr.com/aditya7589</a>
         </div>
         </div>
         <div class="idle"></div>
