--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="nav-links">
             <a href="#" class="active">Home</a>
             <a href="#">Projects</a>
-            <a href="#">Blog</a>
+            <a href="./blogs/index.html">Blog</a>
             <a href="#">About Me</a>
         </div>
         <div class="btn-1">Hire Me</div>
