--- a/blogs/first-blog.html
+++ b/blogs/first-blog.html
@@ -20,11 +20,6 @@
         </div>
         <div class="btn-1">Hire Me</div>
     </div>
-    <div class="hero">
-        <span id="first">Programming Blog</span>
-        <h1 class="title">Learn to Code</h1>
-        <span id="second">I'm not master of anything, but learning new programming languages.</span>
-    </div>
     <div class="main-section">
         <div class="idle"></div>
         <!--main section begins-->
@@ -36,7 +31,7 @@
                     <li><img src="../10.png" alt="">Linux</li>
                 </ul>
             </div>
-            <a href="./first-blog.html"><div class="carousel2">
+            <div class="carousel2">
                 <img src="../10.png" alt="">
                 <div class="text">
                     <span id="xd">xdBlogs</span>
@@ -44,7 +39,7 @@
                     <p>Web Developer/Full Stack Developer - How do you feel when you tag yourself with these titles? The journey is long and full of distraction but xdCoder is here to help through your journey... </p>
                 </div>
             </div>
-        </a>
+
         </div>
         <!---main section ends here-->
         <div class="idle"></div>
