--- a/blogs/first-blog.html
+++ b/blogs/first-blog.html
@@ -1,53 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>xdCoder - Blogs</title>
-    <link rel="stylesheet" href="../styles.css">
-    <link rel="stylesheet" href="blog-style.css">
-</head>
-<body>
-    <div class = "navbar" id ="navbar">
-        <div class = "logo">
-            xdCoder
-        </div>
-        <div class="nav-links">
-            <a href="../index.html" >Home</a>
-            <a href="#">Projects</a>
-            <a href="./blogs/index.html" class="active" >Blog</a>
-            <a href="#">About Me</a>
-        </div>
-        <div class="btn-1">Hire Me</div>
+    <link rel="stylesheet" href="../styles.css" />
+    <link rel="stylesheet" href="blog-style.css" />
+  </head>
+  <body>
+    <div class="navbar" id="navbar">
+      <div class="logo">xdCoder</div>
+      <div class="nav-links">
+        <a href="../index.html">Home</a>
+        <a href="#">Projects</a>
+        <a href="./blogs/index.html" class="active">Blog</a>
+        <a href="#">About Me</a>
+      </div>
+      <div class="btn-1">Hire Me</div>
     </div>
     <div class="main-section">
-        <div class="idle"></div>
-        <!--main section begins-->
-        <div class="main">
-            <div class="cards">
-                <ul>
-                    <li><img src="../10.png" alt="">Web Development</li>
-                    <li><img src="../10.png" alt="">Data Structures & Algorithms</li>
-                    <li><img src="../10.png" alt="">Linux</li>
-                </ul>
-            </div>
-            <div class="carousel2">
-                <img src="../10.png" alt="">
-                <div class="text">
-                    <span id="xd">xdBlogs</span>
-                    <h1 class="xdtitle">FullStack Web Developer Roadmap (2024)</h1>
-                    <p>Web Developer/Full Stack Developer - How do you feel when you tag yourself with these titles? The journey is long and full of distraction but xdCoder is here to help through your journey... </p>
-                </div>
-            </div>
-
+      <div class="idle"></div>
+      <!--main section begins-->
+      <div class="main">
+        <div class="content1">
+          <h1>FullStack Web Developer Roadmap (2024)</h1>
+          <img
+            class="top-image"
+            src="../10.png"
+            alt="Web Developer Roadmap (2024)"
+          />
+          <p>
+            The landscape of web development evolves rapidly, so here's a
+            comprehensive roadmap for a full-stack web developer in 2024:
+            Frontend Development: HTML/CSS: Master semantic HTML5 markup. Learn
+            advanced CSS techniques like Flexbox and Grid. Understand CSS
+            preprocessors like SASS or LESS. JavaScript: Master core JavaScript
+            concepts (ES6+). Learn modern JavaScript frameworks like React,
+            Vue.js, or Angular. Understand state management libraries like Redux
+            (for React) or Vuex (for Vue.js). Responsive Design: Learn
+            responsive design principles. Understand media queries and
+            responsive frameworks like Bootstrap or Tailwind CSS. Version
+            Control: Become proficient with Git and GitHub. Learn branching,
+            merging, and resolving conflicts. Web Performance Optimization:
+            Understand techniques to optimize website performance. Learn about
+            lazy loading, code splitting, and minification. Web Accessibility:
+            Understand WCAG guidelines for web accessibility. Learn how to make
+            websites accessible to people with disabilities. Backend
+            Development: Server-side Language: Choose a server-side language
+            like JavaScript (Node.js), Python (Django or Flask), Ruby (Ruby on
+            Rails), or Java (Spring Boot). Databases: Learn SQL and database
+            management. Understand relational databases like MySQL or
+            PostgreSQL, as well as NoSQL databases like MongoDB. APIs: Learn how
+            to build and consume RESTful APIs. Understand GraphQL for more
+            efficient data fetching. Authentication and Authorization: Learn
+            about user authentication and authorization. Understand OAuth, JWT,
+            and session management. Web Security: Learn about common security
+            vulnerabilities (e.g., XSS, CSRF). Implement security best practices
+            in your applications. DevOps: Containerization: Learn Docker for
+            containerization. Understand container orchestration tools like
+            Kubernetes. Continuous Integration/Continuous Deployment (CI/CD):
+            Learn CI/CD pipelines using tools like Jenkins, GitLab CI, or GitHub
+            Actions. Understand automated testing and deployment strategies.
+            Cloud Services: Familiarize yourself with cloud platforms like AWS,
+            Azure, or Google Cloud Platform. Learn to deploy and manage
+            applications in the cloud. Additional Skills: Testing: Learn testing
+            frameworks like Jest (for JavaScript) or Pytest (for Python).
+            Understand TDD (Test-Driven Development) and BDD (Behavior-Driven
+            Development) principles. Progressive Web Apps (PWAs): Learn to build
+            PWAs for better user experiences. Understand service workers,
+            caching strategies, and offline support. GraphQL: Master GraphQL for
+            building efficient APIs. Learn GraphQL clients like Apollo Client.
+            Serverless Architecture: Understand serverless computing and its
+            benefits. Learn serverless platforms like AWS Lambda or Azure
+            Functions. Soft Skills: Improve communication skills. Learn to work
+            in agile teams and manage projects effectively. Remember, the key to
+            becoming a successful full-stack web developer is continuous
+            learning and staying updated with the latest technologies and trends
+            in the industry. Good luck on your journey!
+          </p>
         </div>
-        <!---main section ends here-->
-        <div class="idle"></div>
+      </div>
+      <!---main section ends here-->
+      <div class="idle"></div>
     </div>
     <!---footer-->
-    <div class ="footer">
-        <div class="text2">I am the chosen one.</div>
+    <div class="footer">
+      <div class="text2">I am the chosen one.</div>
     </div>
-
-</body>
+  </body>
 </html>
