--- a/blogs/first-blog.html
+++ b/blogs/first-blog.html
@@ -32,38 +32,44 @@
           <p>
             The landscape of web development evolves rapidly, so here's a
             comprehensive roadmap for a full-stack web developer in 2024:
-            Frontend Development: HTML/CSS: Master semantic HTML5 markup. Learn
+            
+            Frontend Development: 
+            <ol>
+            <li>HTML/CSS:</li> Master semantic HTML5 markup. Learn
             advanced CSS techniques like Flexbox and Grid. Understand CSS
-            preprocessors like SASS or LESS. JavaScript: Master core JavaScript
+            preprocessors like SASS or LESS. <li>JavaScript:</li> Master core JavaScript
             concepts (ES6+). Learn modern JavaScript frameworks like React,
             Vue.js, or Angular. Understand state management libraries like Redux
-            (for React) or Vuex (for Vue.js). Responsive Design: Learn
+            (for React) or Vuex (for Vue.js). <li>Responsive Design:</li> Learn
             responsive design principles. Understand media queries and
-            responsive frameworks like Bootstrap or Tailwind CSS. Version
-            Control: Become proficient with Git and GitHub. Learn branching,
-            merging, and resolving conflicts. Web Performance Optimization:
+            responsive frameworks like Bootstrap or Tailwind CSS. <li>Version
+            Control:</li> Become proficient with Git and GitHub. Learn branching,
+            merging, and resolving conflicts. <li>Web Performance Optimization:</li>
             Understand techniques to optimize website performance. Learn about
-            lazy loading, code splitting, and minification. Web Accessibility:
+            lazy loading, code splitting, and minification. <li>Web Accessibility:</li>
             Understand WCAG guidelines for web accessibility. Learn how to make
-            websites accessible to people with disabilities. Backend
-            Development: Server-side Language: Choose a server-side language
+            websites accessible to people with disabilities. </ol>
+            Backend
+            Development: 
+            <ol>
+            <li>Server-side Language:</li> Choose a server-side language
             like JavaScript (Node.js), Python (Django or Flask), Ruby (Ruby on
-            Rails), or Java (Spring Boot). Databases: Learn SQL and database
+            Rails), or Java (Spring Boot). <li>Databases:</li> Learn SQL and database
             management. Understand relational databases like MySQL or
-            PostgreSQL, as well as NoSQL databases like MongoDB. APIs: Learn how
+            PostgreSQL, as well as NoSQL databases like MongoDB. <li>APIs:</li> Learn how
             to build and consume RESTful APIs. Understand GraphQL for more
-            efficient data fetching. Authentication and Authorization: Learn
+            efficient data fetching. <li>Authentication and Authorization:</li> Learn
             about user authentication and authorization. Understand OAuth, JWT,
-            and session management. Web Security: Learn about common security
+            and session management. <li>Web Security:</li> Learn about common security
             vulnerabilities (e.g., XSS, CSRF). Implement security best practices
-            in your applications. DevOps: Containerization: Learn Docker for
+            in your applications. <li>DevOps:</li> Containerization: Learn Docker for
             containerization. Understand container orchestration tools like
-            Kubernetes. Continuous Integration/Continuous Deployment (CI/CD):
+            Kubernetes. <li>Continuous Integration/Continuous Deployment (CI/CD):</li>
             Learn CI/CD pipelines using tools like Jenkins, GitLab CI, or GitHub
             Actions. Understand automated testing and deployment strategies.
-            Cloud Services: Familiarize yourself with cloud platforms like AWS,
+            <li>Cloud Services:</li> Familiarize yourself with cloud platforms like AWS,
             Azure, or Google Cloud Platform. Learn to deploy and manage
-            applications in the cloud. Additional Skills: Testing: Learn testing
+            applications in the cloud. </ol>Additional Skills: Testing: Learn testing
             frameworks like Jest (for JavaScript) or Pytest (for Python).
             Understand TDD (Test-Driven Development) and BDD (Behavior-Driven
             Development) principles. Progressive Web Apps (PWAs): Learn to build
