--- a/blogs/first-blog.html
+++ b/blogs/first-blog.html
@@ -1,97 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>xdCoder - Blogs</title>
     <link rel="stylesheet" href="../styles.css" />
     <link rel="stylesheet" href="blog-style.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <div class="navbar" id="navbar">
-      <div class="logo">xdCoder</div>
-      <div class="nav-links">
-        <a href="../index.html">Home</a>
-        <a href="#">Projects</a>
-        <a href="./blogs/index.html" class="active">Blog</a>
-        <a href="#">About Me</a>
-      </div>
-      <div class="btn-1">Hire Me</div>
+        <div class="logo">xdCoder</div>
+        <div class="nav-links">
+            <a href="../index.html">Home</a>
+            <a href="#">Projects</a>
+            <a href="./index.html" class="active">Blog</a>
+            <a href="#">About Me</a>
+        </div>
+        <div class="btn-1">Hire Me</div>
     </div>
     <div class="main-section">
-      <div class="idle"></div>
-      <!--main section begins-->
-      <div class="main">
-        <div class="content1">
-          <h1>FullStack Web Developer Roadmap (2024)</h1>
-          <img
-            class="top-image"
-            src="../10.png"
-            alt="Web Developer Roadmap (2024)"
-          />
-          <p>
-            The landscape of web development evolves rapidly, so here's a
-            comprehensive roadmap for a full-stack web developer in 2024:
-            
-            Frontend Development: 
-            <ol>
-            <li>HTML/CSS:</li> Master semantic HTML5 markup. Learn
-            advanced CSS techniques like Flexbox and Grid. Understand CSS
-            preprocessors like SASS or LESS. <li>JavaScript:</li> Master core JavaScript
-            concepts (ES6+). Learn modern JavaScript frameworks like React,
-            Vue.js, or Angular. Understand state management libraries like Redux
-            (for React) or Vuex (for Vue.js). <li>Responsive Design:</li> Learn
-            responsive design principles. Understand media queries and
-            responsive frameworks like Bootstrap or Tailwind CSS. <li>Version
-            Control:</li> Become proficient with Git and GitHub. Learn branching,
-            merging, and resolving conflicts. <li>Web Performance Optimization:</li>
-            Understand techniques to optimize website performance. Learn about
-            lazy loading, code splitting, and minification. <li>Web Accessibility:</li>
-            Understand WCAG guidelines for web accessibility. Learn how to make
-            websites accessible to people with disabilities. </ol>
-            Backend
-            Development: 
-            <ol>
-            <li>Server-side Language:</li> Choose a server-side language
-            like JavaScript (Node.js), Python (Django or Flask), Ruby (Ruby on
-            Rails), or Java (Spring Boot). <li>Databases:</li> Learn SQL and database
-            management. Understand relational databases like MySQL or
-            PostgreSQL, as well as NoSQL databases like MongoDB. <li>APIs:</li> Learn how
-            to build and consume RESTful APIs. Understand GraphQL for more
-            efficient data fetching. <li>Authentication and Authorization:</li> Learn
-            about user authentication and authorization. Understand OAuth, JWT,
-            and session management. <li>Web Security:</li> Learn about common security
-            vulnerabilities (e.g., XSS, CSRF). Implement security best practices
-            in your applications. <li>DevOps:</li> Containerization: Learn Docker for
-            containerization. Understand container orchestration tools like
-            Kubernetes. <li>Continuous Integration/Continuous Deployment (CI/CD):</li>
-            Learn CI/CD pipelines using tools like Jenkins, GitLab CI, or GitHub
-            Actions. Understand automated testing and deployment strategies.
-            <li>Cloud Services:</li> Familiarize yourself with cloud platforms like AWS,
-            Azure, or Google Cloud Platform. Learn to deploy and manage
-            applications in the cloud. </ol>Additional Skills: Testing: Learn testing
-            frameworks like Jest (for JavaScript) or Pytest (for Python).
-            Understand TDD (Test-Driven Development) and BDD (Behavior-Driven
-            Development) principles. Progressive Web Apps (PWAs): Learn to build
-            PWAs for better user experiences. Understand service workers,
-            caching strategies, and offline support. GraphQL: Master GraphQL for
-            building efficient APIs. Learn GraphQL clients like Apollo Client.
-            Serverless Architecture: Understand serverless computing and its
-            benefits. Learn serverless platforms like AWS Lambda or Azure
-            Functions. Soft Skills: Improve communication skills. Learn to work
-            in agile teams and manage projects effectively. Remember, the key to
-            becoming a successful full-stack web developer is continuous
-            learning and staying updated with the latest technologies and trends
-            in the industry. Good luck on your journey!
-          </p>
+        <div class="idle"></div>
+        <!--main section begins-->
+        <div class="main">
+            <div class="content1">
+                <h1>FullStack Web Developer Roadmap (2024)</h1>
+                <img class="top-image" src="../10.png" alt="Web Developer Roadmap (2024)" />
+                <p>The landscape of web development evolves rapidly, so here's a comprehensive roadmap for a full-stack web developer in 2024.
+                </p>
+            </div>
+            <div class="content2">
+                <p class="blog-content">
+                    <h3>Frontend Development:</h3>
+                    <ol >
+                        <li>HTML/CSS:</li>
+                            <ul>
+                                <li>Master semantic HTML5 markup.</li>
+                                <li>Learn advanced CSS techniques like Flexbox and Grid.</li>
+                                <li>Understand CSS preprocessors like SASS or LESS.</li>
+                            </ul>
+                        <li>JavaScript:</li>
+                            <ul>
+                                <li>Master core JavaScript concepts (ES6+).</li>
+                                <li>Learn modern JavaScript frameworks like React, Vue.js, or Angular.</li>
+                                <li>Understand state management libraries like Redux (for React) or Vuex (for Vue.js).</li>
+                            </ul>
+                        <li>Responsive Design:</li>
+                            <ul>
+                                <li>Learn responsive design principles.</li>
+                                <li>Understand media queries and responsive frameworks like Bootstrap or Tailwind CSS.</li>
+                            </ul>
+                        <li>Version Control:</li>
+                        <ul>
+                            <li>Become proficient with Git and GitHub.</li>
+                            <li>Learn branching, merging, and resolving conflicts.</li>
+                        </ul>
+                        <li>Web Performance Optimization:</li>
+                        <ul>
+                            <li>Understand techniques to optimize website performance.</li>
+                            <li>Learn about lazy loading, code splitting, and minification.</li>
+                        </ul>
+                        <li>Web Accessibility:</li>
+                        <ul>
+                            <li>Understand WCAG guidelines for web accessibility.</li>
+                            <li>Learn how to make websites accessible to people with disabilities.</li>
+                        </ul>
+                    </ol>
+                    <h3>Backend Development:</h3>
+                    <ol>
+                        <li>Server-side Language:</li>
+                        <ul>
+                            <li>Choose a server-side language like JavaScript (Node.js), Python (Django or Flask), Ruby (Ruby on Rails), or Java (Spring Boot).</li>
+                        </ul>
+                        <li>Databases:</li>
+                        <ul>
+                            <li>Learn SQL and database management.</li>
+                            <li>Understand relational databases like MySQL or PostgreSQL, as well as NoSQL databases like MongoDB.</li>
+                        </ul>
+                        <li>APIs:</li>
+                        <ul>
+                            <li>Learn how to build and consume RESTful APIs.</li>
+                            <li>Understand GraphQL for more efficient data fetching.</li>
+                        </ul>
+                        <li>Authentication and Authorization:</li>
+                        <ul>
+                            <li>Learn about user authentication and authorization.</li>
+                            <li>Understand OAuth, JWT, and session management.</li>
+                        </ul>
+                        <li>Web Security:</li>
+                        <ul>
+                            <li>Learn about common security vulnerabilities (e.g., XSS, CSRF).</li>
+                            <li>Implement security best practices in your applications.</li>
+                        </ul>
+                    </ol>
+                    <h3>DevOps:</h3>
+                    <ol>
+                        <li>Containerization:</li>
+                        <ul>
+                            <li>Learn Docker for containerization.</li>
+                            <li>Understand container orchestration tools like Kubernetes.</li>
+                        </ul>
+                        <li>Continuous Integration/Continuous Deployment (CI/CD):</li>
+                        <ul>
+                            <li>Learn CI/CD pipelines using tools like Jenkins, GitLab CI, or GitHub Actions.</li>
+                            <li>Understand automated testing and deployment strategies.</li>
+                        </ul>
+                        <li>Cloud Services:</li>
+                        <ul>
+                            <li>Familiarize yourself with cloud platforms like AWS, Azure, or Google Cloud Platform.</li>
+                            <li>Learn to deploy and manage applications in the cloud.</li>
+                        </ul>
+                    </ol>
+                    <h3>Additional Skills:</h3>
+                    <ol>
+                        <li>Testing:</li>
+                        <ul>
+                            <li>Learn testing frameworks like Jest (for JavaScript) or Pytest (for Python).</li>
+                            <li>Understand TDD (Test-Driven Development) and BDD (Behavior-Driven Development) principles.</li>
+                        </ul>
+                        <li>Progressive Web Apps (PWAs):</li>
+                        <ul>
+                            <li>Learn to build PWAs for better user experiences.</li>
+                            <li>Understand service workers, caching strategies, and offline support.</li>
+                        </ul>
+                        <li>GraphQL:</li>
+                        <ul>
+                            <li>Master GraphQL for building efficient APIs.</li>
+                            <li>Learn GraphQL clients like Apollo Client.</li>
+                        </ul>
+                        <li>Serverless Architecture:</li>
+                        <ul>
+                            <li>Understand serverless computing and its benefits.</li>
+                            <li>Learn serverless platforms like AWS Lambda or Azure Functions.</li>
+                        </ul>
+                        <li>Soft Skills:</li>
+                        <ul>
+                            <li>Improve communication skills.</li>
+                            <li>Learn to work in agile teams and manage projects effectively.</li>
+                        </ul>
+                    </ol>
+                </p>
+            </div>
         </div>
-      </div>
-      <!---main section ends here-->
-      <div class="idle"></div>
+        <!---main section ends here-->
+        <div class="idle"></div>
     </div>
     <!---footer-->
     <div class="footer">
-      <div class="text2">I am the chosen one.</div>
+        <div class="text2">I am the chosen one.</div>
     </div>
-  </body>
+</body>
+
 </html>
