--- a/blogs/first-blog.html
+++ b/blogs/first-blog.html
@@ -26,12 +26,12 @@
         <div class="main">
             <div class="content1">
                 <h1>FullStack Web Developer Roadmap (2024)</h1>
-                <img class="top-image" src="../10.png" alt="Web Developer Roadmap (2024)" />
+                <img class="top-image" src="./pics/web-design.jpg" alt="Web Developer Roadmap (2024)" />
                 <p>The landscape of web development evolves rapidly, so here's a comprehensive roadmap for a full-stack web developer in 2024.
                 </p>
             </div>
             <div class="content2">
-                <p class="blog-content">
+                
                     <h3>Frontend Development:</h3>
                     <ol >
                         <li>HTML/CSS:</li>
@@ -140,7 +140,9 @@
                             <li>Learn to work in agile teams and manage projects effectively.</li>
                         </ul>
                     </ol>
-                </p>
+                    <p class="last">
+                        Remember, the key to becoming a successful full-stack web developer is continuous learning and staying updated with the latest technologies and trends in the industry. Good luck on your journey!
+                    </p>
             </div>
         </div>
         <!---main section ends here-->
