--- a/blogs/first-blog.html
+++ b/blogs/first-blog.html
@@ -26,7 +26,7 @@
         <div class="main">
             <div class="content1">
                 <h1>FullStack Web Developer Roadmap (2024)</h1>
-                <img class="top-image" src="./pics/web-design.jpg" alt="Web Developer Roadmap (2024)" />
+                <img class="top-image" src="../10.png" alt="Web Developer Roadmap (2024)" />
                 <p>The landscape of web development evolves rapidly, so here's a comprehensive roadmap for a full-stack web developer in 2024.
                 </p>
             </div>
