today's work done

--- a/blogs/first-blog.html
+++ b/blogs/first-blog.html
@@ -142,6 +142,8 @@
                     </ol>
                     <p class="last">
                         Remember, the key to becoming a successful full-stack web developer is continuous learning and staying updated with the latest technologies and trends in the industry. Good luck on your journey!
+                        <br>
+                        Follow me on <a href="https://www.instagram.com/xdcoder.xyz/">Instagram</a>
                     </p>
             </div>
         </div>
