--- a/blogs/first-blog.html
+++ b/blogs/first-blog.html
@@ -13,10 +13,12 @@
     <div class="navbar" id="navbar">
         <div class="logo">xdCoder</div>
         <div class="nav-links">
-            <a href="../index.html">Home</a>
-            <a href="#">Projects</a>
-            <a href="./index.html" class="active">Blog</a>
-            <a href="#">About Me</a>
+            <ul>
+                <li><a href="../index.html" >Home</a></li>
+                <li><a href="../projects/index.html">Projects</a></li>
+                <li><a href="./index.html" class="active">Blog</a></li>
+                <li><a href="#">About Me</a></li>
+        </ul>
         </div>
         <div class="btn-1">Hire Me</div>
     </div>
