--- a/blogs/index.html
+++ b/blogs/index.html
@@ -13,10 +13,12 @@
             xdCoder
         </div>
         <div class="nav-links">
-            <a href="../index.html" >Home</a>
-            <a href="#">Projects</a>
-            <a href="./blogs/index.html" class="active" >Blog</a>
-            <a href="#">About Me</a>
+            <ul>
+                <li><a href="../index.html" >Home</a></li>
+                <li><a href="../projects/index.html">Projects</a></li>
+                <li><a href="./index.html" class="active">Blog</a></li>
+                <li><a href="#">About Me</a></li>
+        </ul>
         </div>
         <div class="btn-1">Hire Me</div>
     </div>
@@ -31,9 +33,9 @@
         <div class="main">
             <div class="cards">
                 <ul>
-                    <li><img src="../10.png" alt="">Web Development</li>
-                    <li><img src="../10.png" alt="">Data Structures & Algorithms</li>
-                    <li><img src="../10.png" alt="">Linux</li>
+                    <li><img src="./pics/webdevelopment.jpg" alt=""><span>Web Development</span></li>
+                    <li><img src="./pics/Data-Structures-and-Algorithms.jpg" alt=""><span>Data Structures & Algorithms</span></li>
+                    <li><img src="./pics/linux.jpeg" alt=""><span>Linux</span></li>
                 </ul>
             </div>
             <a href="./first-blog.html"><div class="carousel2">
@@ -45,6 +47,53 @@
                 </div>
             </div>
         </a>
+        <div class="blog-wrapper">
+            <div class="blog-card">
+                <div class="card-header">
+                    <img src="./pics/brain-programmer.JPG" alt="">
+                    <h3> How to be a great software engineer without using your brain.</h3>
+                </div>
+                <div class="card-text">
+                    <div class="info">
+                        <ul>
+                            <li>May 04, 2024</li>
+                            <li>xdcoder</li>
+                        </ul>
+                    </div>
+                    <p>Learn how to be a successful software engineer without using excessive brainpower. Discover work methodologies and practices that can help simplify complexity. Explore the difference between TDD and BDD.</p>
+                </div>
+            </div>
+            <div class="blog-card">
+                <div class="card-header">
+                    <img src="./pics/javascript-animation.jpg" alt="">
+                    <h3>Incredible JavaScript Animation Libraries</h3>
+                </div>
+                <div class="card-text">
+                    <div class="info">
+                        <ul>
+                            <li>May 04, 2024</li>
+                            <li>xdcoder</li>
+                        </ul>
+                    </div>
+                    <p>JavaScript animation libraries simplify the animation process, enhance user experience, and boost website traffic. GSAP, Anime.js, Three.js, Popmotion.io, and React-spring are some popular libraries.</p>
+                </div>
+            </div>
+            <div class="blog-card">
+                <div class="card-header">
+                    <img src="./pics/minifying-css.jpg" alt="">
+                    <h3>Why don’t we talk about minifying CSS anymore?</h3>
+                </div>
+                <div class="card-text">
+                    <div class="info">
+                        <ul>
+                            <li>May 04, 2024</li>
+                            <li>xdcoder</li>
+                        </ul>
+                    </div>
+                    <p>Minifying CSS is less talked about due to improvements in delivery and optimization with modern tech stacks. Minifying CSS helps optimize First Contentful Paint (FCP) and the critical render path...</p>
+                </div>
+            </div>
+        </div>
         </div>
         <!---main section ends here-->
         <div class="idle"></div>
