--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
             xdCoder
         </div>
         <div class="nav-links">
-            <a href="#" class="active">Home</a>
-            <a href="#">Projects</a>
-            <a href="./blogs/index.html">Blog</a>
-            <a href="#">About Me</a>
+            <ul>
+                <li><a href="#" class="active">Home</a></li>
+                <li><a href="./projects/index.html">Projects</a></li>
+                <li><a href="./blogs/index.html">Blog</a></li>
+                <li><a href="#">About Me</a></li>
+        </ul>
         </div>
         <div class="btn-1">Hire Me</div>
     </div>
@@ -24,7 +26,7 @@
         <div class="hero">
             <div class="text">
                 <h1>I build things for the web.</h1>
-                <p>I'm a tech enthusiast person trying to learn coding and new stuff. I've completed my diploma in Computer Science and Engineering in 2023 and now I'm crating xdCoder in github grids. I want to become a cybersecurity expert. And I like to read books and write stories and puns too. Overall I want to be famous and admirable.</p><br/>
+                <p>I'm a tech enthusiast person trying to learn coding and new stuff. I've completed my diploma in Computer Science and Engineering in 2023 and now I'm creating xdCoder in github grids. I want to become a cybersecurity expert. And I like to read books and write stories and puns too. Overall I want to be famous and admirable.</p><br/>
                 <ul><b>Things I'm interested in:</b>
                     <li>Mathematics</li>
                     <li>JavaScript</li>
@@ -39,7 +41,7 @@
 
             </div>
             <div class="image">
-                <img src="7.jpg" alt="hero_image">
+                <img src="7.jfif" alt="hero_image">
             </div>
         </div>
    
@@ -66,7 +68,7 @@
             <h3>List of Services I provide...</h3>
             <div class ="services-list">
                 <ul>
-                    <li><img src="8.png"> Website Development</li>
+                    <li><img src="./blogs/pics/webdevelopment.jpg"> Website Development</li>
                     <li><img src="9.png"> Wordpress Development</li>
                     <li><img src="10.png"> Content Creation</li>
                     <li><img src="11.png"> Online Tutoring</li>
@@ -76,7 +78,7 @@
         <div class="freelancing">
             <div class="heading">Hire me as a freelancer...</div>
             <span>Take a look at my fiverr account on - <a href="https://www.fiverr.com/aditya7589">https://www.fiverr.com/aditya7589</a></span>
-           <a href="https://www.fiverr.com/aditya7589"><img src="12.png" alt=""></a>
+           
         </div>
         </div>
         
