--- a/blogs/index.html
+++ b/blogs/index.html
@@ -79,67 +79,67 @@
             <div class="second">
                 <ul>
                     <a href="#">
-                        <li>Trending Blogs</li>
+                        <li>Image Slider using HTML and CSS</li>
                     </a>
                     <a href="#">
-                        <li>Trending Blogs</li>
+                        <li>Convert an Image into Grayscale Image using HTML/CSS</li>
                     </a>
                     <a href="#">
-                        <li>Trending Blogs</li>
+                        <li>How Web3 will transform our lives</li>
                     </a>
                     <a href="#">
-                        <li>Trending Blogs</li>
+                        <li>How to Create A Discord BOT</li>
                     </a>
                     <a href="#">
-                        <li>Trending Blogs</li>
+                        <li>How to find factorial of a number in JavaScript?</li>
                     </a>
                     <a href="#">
-                        <li>Trending Blogs</li>
+                        <li>Is JavaScript case sensitive?</li>
                     </a>
                     <a href="#">
-                        <li>Trending Blogs</li>
+                        <li>Calculate current week number in JavaScript</li>
                     </a>
                     <a href="#">
-                        <li>Trending Blogs</li>
+                        <li>How to pick random elements from an Array</li>
                     </a>
                     <a href="#">
-                        <li>Trending Blogs</li>
+                        <li>Sum of digits program in C++</li>
                     </a>
                     <a href="#">
-                        <li>Trending Blogs</li>
+                        <li>C++ program to find greatest of four numbers</li>
                     </a>
                     <a href="#">
-                        <li>Trending Blogs</li>
+                        <li>Top 10 C++ Project Ideas for Beginners</li>
                     </a>
                     <a href="#">
-                        <li>Trending Blogs</li>
+                        <li>How to add a border in CSS?</li>
                     </a>
                     <a href="#">
-                        <li>Trending Blogs</li>
+                        <li>How to center a button in CSS?</li>
                     </a>
                     <a href="#">
-                        <li>Trending Blogs</li>
+                        <li>CSS Display Flex</li>
                     </a>
                     <a href="#">
-                        <li>Trending Blogs</li>
+                        <li>Ping Pong Game Using Turtle in Python</li>
                     </a>
                     <a href="#">
-                        <li>Trending Blogs</li>
+                        <li>C vs. C++ vs. Python vs. Java</li>
                     </a>
                     <a href="#">
-                        <li>Trending Blogs</li>
+                        <li>How to calculate the perimeter and area of a circle using JavaScript?</li>
                     </a>
                     <a href="#">
-                        <li>Trending Blogs</li>
+                        <li>How to Create a Form in Html</li>
                     </a>
                     <a href="#">
-                        <li>Trending Blogs</li>
+                        <li>What is Color Picker for HTML?</li>
                     </a>
                     <a href="#">
-                        <li>Trending Blogs</li>
+                        <li>Weather App using  HTML/CSS and JavaScript</li>
                     </a>
                     <a href="#">
-                        <li>Trending Blogs</li>
+                        <li>BMI Calculator using JavaScript</li>
                     </a>
                 </ul>
             </div>
