--- a/blogs/index.html
+++ b/blogs/index.html
@@ -90,7 +90,7 @@
                     <a href="#">
                         <li>How to Create A Discord BOT</li>
                     </a>
-                    <a href="#">
+                    <a href="./web-development-blogs/factorial of a number in JavaScript.html">
                         <li>How to find factorial of a number in JavaScript?</li>
                     </a>
                     <a href="#">
