--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
             <h3>Projects I'm currently working on...</h3>
             <br/>
             <p>
+                This is just educational project. I'll build my main website using wordpress.
             Not any bigger project, I'm just building my core programming skills these days. Obviously it is hard to not get invloved in creating something bigger but it just takes time and I stay alone most of the time and have to do other things so I'm not planning to do that. I'm just focused on building my basic skills and working on mathematics so it will help in my future projects and work.<br/>
             But still I build few projects randomly and when I'm in the mood. Here is the list of those projects:
             <ul>
